# CookiecutterTemplate

./: cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  git_init_and_connect_to_remote.sh  requirements_dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/misc/: path_helper.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/tests/: conftest.py  test_path_helper.py
