[metadata]
name={{cookiecutter.package_name}}
version=0.0.1
author={{cookiecutter.author}}
author_email={{cookiecutter.author_email}}
long_description=file: README.md
download_url=https://gitlab.dlr.de/{{cookiecutter.git_username}}/{{cookiecutter.project_slug}}
classifiers =
    Programming Language :: Python :: 3
[options]
install_requires=

packages = find:

[options.packages.find]
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include={{cookiecutter.package_name}}*
exclude=examples*
    tools*
    docs*
    {{cookiecutter.package_name}}.tests*
